# rndr

./: angular.json  bump-app-version.sh  jest.config.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.spec.json  version-patcher.cjs
.github/workflows/: release.yml  version-bump.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html
coverage/lcov-report/app/: app-constants.ts.html  index.html
coverage/lcov-report/environments/: environment.ts.html  index.html
src/: index.html  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: blob_manager.rs  environment_modifiers.rs  installers.rs  lib.rs  main.rs  render.rs  stack_manager.rs  utils.rs
src-tauri/src/environment_modifiers/: env_mod.rs  validate_aws_credentials.rs
src-tauri/src/installers/: aws_cli_installer.rs  dependency.rs  dependency_checker.rs  docker_installer.rs  git_installer.rs  installer.rs  os_deps_installer.rs  python_deps_installer.rs  python_installer.rs  test_installer.rs
src-tauri/src/render/: aws.rs  jobs.rs  os_fn.rs  process.rs
src-tauri/src/stack_manager/: create_stack.rs  describe_stack.rs  list_stacks.rs  stack_file_repo.rs
src-tauri/src/utils/: aws_client_factory.rs  aws_credentials.rs  error.rs  file_logger.rs  logger.rs  read_file_to_text_string.rs  sentry_logger.rs
src/app/: app-constants.ts  app-routes.ts  app.component.ts  has-deps.guard.ts
src/app/+state/: app-state.actions.ts  app.state.ts  (+3 more)
src/environments/: environment.prod.ts  environment.ts
(+122 files in other folders)
