[package]
name = "blender_batch_render_helper"
version = "0.0.0"
description = "Utility to help blender artist render on AWS infrastructure"
authors = ["Thompson Edolo"]
license = ""
repository = "https://github.com/getvoicify/rndr"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["devtools", "fs-all", "notification-all", "path-all", "process-all", "shell-execute", "shell-open", "window-close", "window-maximize", "window-minimize", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
csv = "1.1"
sentry = "0.30.0"
log = "0.4.16"
chrono = "0.4.19"
aws-config = "0.54.1"
aws-sdk-batch = "0.24.0"
aws-sdk-cloudformation = "0.24.0"
tokio = { version = "1", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
